lib/bindings/generated_bindings_for_portforward.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for PortForward Go shared library.
class PortForwardLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PortForwardLibrary(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PortForwardLibrary.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int _GoStringLen(_GoString_ s) {
    return __GoStringLen(s);
  }

  late final __GoStringLenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(_GoString_)>>(
        '_GoStringLen',
      );
  late final __GoStringLen = __GoStringLenPtr
      .asFunction<int Function(_GoString_)>();

  ffi.Pointer<ffi.Char> _GoStringPtr(_GoString_ s) {
    return __GoStringPtr(s);
  }

  late final __GoStringPtrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>>(
        '_GoStringPtr',
      );
  late final __GoStringPtr = __GoStringPtrPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(_GoString_)>();

  void RegisterPort(int port) {
    return _RegisterPort(port);
  }

  late final _RegisterPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.LongLong)>>(
        'RegisterPort',
      );
  late final _RegisterPort = _RegisterPortPtr.asFunction<void Function(int)>();

  void UnregisterPort() {
    return _UnregisterPort();
  }

  late final _UnregisterPortPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('UnregisterPort');
  late final _UnregisterPort = _UnregisterPortPtr.asFunction<void Function()>();

  void BridgeInit(ffi.Pointer<ffi.Void> api) {
    return _BridgeInit(api);
  }

  late final _BridgeInitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'BridgeInit',
      );
  late final _BridgeInit =
      _BridgeInitPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int CreatePortForwarder(
    ffi.Pointer<ffi.Char> urlStr,
    ffi.Pointer<ffi.Char> portsStr,
    ffi.Pointer<ffi.Char> addressStr,
    int port,
  ) {
    return _CreatePortForwarder(urlStr, portsStr, addressStr, port);
  }

  late final _CreatePortForwarderPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.LongLong Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.LongLong,
          )
        >
      >('CreatePortForwarder');
  late final _CreatePortForwarder =
      _CreatePortForwarderPtr.asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  int StartForwardPorts(int pfID, int port) {
    return _StartForwardPorts(pfID, port);
  }

  late final _StartForwardPortsPtr =
      _lookup<
        ffi.NativeFunction<ffi.LongLong Function(ffi.LongLong, ffi.LongLong)>
      >('StartForwardPorts');
  late final _StartForwardPorts =
      _StartForwardPortsPtr.asFunction<int Function(int, int)>();

  void StopForwardPorts(int pfID, int port) {
    return _StopForwardPorts(pfID, port);
  }

  late final _StopForwardPortsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.LongLong, ffi.LongLong)>
      >('StopForwardPorts');
  late final _StopForwardPorts =
      _StopForwardPortsPtr.asFunction<void Function(int, int)>();

  void GetForwardedPorts(int pfID, int port) {
    return _GetForwardedPorts(pfID, port);
  }

  late final _GetForwardedPortsPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.LongLong, ffi.LongLong)>
      >('GetForwardedPorts');
  late final _GetForwardedPorts =
      _GetForwardedPortsPtr.asFunction<void Function(int, int)>();

  void StopTask(int taskID, int port) {
    return _StopTask(taskID, port);
  }

  late final _StopTaskPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.LongLong, ffi.LongLong)>
      >('StopTask');
  late final _StopTask = _StopTaskPtr.asFunction<void Function(int, int)>();
}

typedef ptrdiff_t = ffi.LongLong;
typedef Dartptrdiff_t = int;

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef GoInt8 = ffi.SignedChar;
typedef DartGoInt8 = int;
typedef GoUint8 = ffi.UnsignedChar;
typedef DartGoUint8 = int;
typedef GoInt16 = ffi.Short;
typedef DartGoInt16 = int;
typedef GoUint16 = ffi.UnsignedShort;
typedef DartGoUint16 = int;
typedef GoInt32 = ffi.Int;
typedef DartGoInt32 = int;
typedef GoUint32 = ffi.UnsignedInt;
typedef DartGoUint32 = int;
typedef GoInt64 = ffi.LongLong;
typedef DartGoInt64 = int;
typedef GoUint64 = ffi.UnsignedLongLong;
typedef DartGoUint64 = int;
typedef GoInt = GoInt64;
typedef GoUint = GoUint64;
typedef GoUintptr = ffi.Size;
typedef DartGoUintptr = int;
typedef GoFloat32 = ffi.Float;
typedef DartGoFloat32 = double;
typedef GoFloat64 = ffi.Double;
typedef DartGoFloat64 = double;

final class _C_float_complex extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Float> _Val;
}

typedef _Fcomplex = _C_float_complex;
typedef GoComplex64 = _Fcomplex;

final class _C_double_complex extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Double> _Val;
}

typedef _Dcomplex = _C_double_complex;
typedef GoComplex128 = _Dcomplex;
typedef GoString = _GoString_;
typedef GoMap = ffi.Pointer<ffi.Void>;
typedef GoChan = ffi.Pointer<ffi.Void>;

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}
